--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -68,6 +68,22 @@
       <!-- end Experience -->
       {% endif %}
 
+      {% if site.resume_section_ability %}
+      <!-- begin Ability -->
+      <section class="content-section">
+        <header class="section-header">
+          <h2>역량</h2>
+        </header>
+
+        {% for ability in site.data.ability %}
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h4 class="resume-item-details">{{ ability.skill }}</h4>
+          <p class="resume-item-copy">{{ ability.description }}</p>
+        </div>
+        {% endfor %}
+      </section>
+      <!-- end Ability -->
+      {% endif %}
 
       {% if site.resume_section_education %}
       <!-- begin Education -->
