--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -4,14 +4,14 @@
 
   <!-- GitHub link -->
   {% if site.resume_social_links.resume_github_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_github_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-github.html %}</a></li>
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_github_url }}" class="icon-link" itemprop="sameAs" target="_blank">{% include icons/icon-github.html %}</a></li>
   {% endif %}
 
   <!-- Twitter link -->
   {% if site.resume_social_links.resume_twitter_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_twitter_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-twitter.html %}</a></li>
   {% endif %}
-  
+
   <!-- Medium link -->
   {% if site.resume_social_links.resume_medium_url %}
   <li class="icon-link-item">
