--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -39,8 +39,8 @@
           {{ site.resume_header_intro }}
         </div>
 
-        {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
+        <!--{% if site.resume_looking_for_work == 'yes' %}
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>-->
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
@@ -92,6 +92,9 @@
         <header class="section-header">
           <h2>기술</h2>
         </header>
+        <h6>상 : 어떠한 기능도 구현할 수 있으며 현업에 바로 투입될 수 있는 수준
+	중 : 기존 코드를 유지 보수하며 개발 / 운영 할 수 있는 수준
+	하 : 문제의 원인을 파악하기 코드를 읽고 이해할 수 있는 수준</h6>
         {% for skill in site.data.skills %}
         <div class="resume-item">
           <h4 class="resume-item-details">{{ skill.skill }}</h4>
