--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -94,9 +94,9 @@
         <header class="section-header">
           <h2>기술</h2>
         </header>
-        <p style=”color:#FF0000">상 : 어떠한 기능도 구현할 수 있으며 현업에 바로 투입될 수 있는 수준</p>
-        <p style=”color:#e69138">중 : 기존 코드를 유지 보수하며 개발 / 운영 할 수 있는 수준</p>
-        <p style=”color:#38761d">하 : 문제의 원인을 파악하기 코드를 읽고 이해할 수 있는 수준</p>
+        <p style=color:#FF0000>상 : 어떠한 기능도 구현할 수 있으며 현업에 바로 투입될 수 있는 수준</p>
+        <p style=color:#e69138>중 : 기존 코드를 유지 보수하며 개발 / 운영 할 수 있는 수준</p>
+        <p style=color:#38761d>하 : 문제의 원인을 파악하기 코드를 읽고 이해할 수 있는 수준</p>
 
         {% for skill in site.data.skills %}
         <div class="resume-item">
