fix/링크 색상 노가다 수정 ...

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -161,7 +161,7 @@
         </header>
         {% for activity in site.data.activity %}
         <div class="resume-item">
-          <p class="resume-item-details">{{ activity.description }}</p>
+          <p class="resume-item-copy">{{ activity.description }}</p>
         </div>
         {% endfor %}
 
